_css/stacks.css
/* Mobile Layout: 480px and below. */


/********** Overrides of default HTML styling **********/
html {
	height: 100%;
	overflow: hidden;
}

body {
	height: 100%;
	overflow: scroll;
}


/********** Page structure **********/

  /*** Page Content ***/

.main-wrapper {
	height: 100%;
	width: 100%;
	overflow: scroll;
}

     /*** Main Content ***/

.stacks-wrapper {	
	margin: 15px;
	margin-bottom: 30px;
}

.content {
	height: 100%;
	width: 100%;
	background-color: white;
	margin: 0px !important;
	padding: 0px !important;
}

.main-frame {
	height: 100%;
	width: 100%;
	
	display: block;
	border: none;
}



/* Tablet Layout: 481px to 768px. Inherits styles from: Mobile Layout. */

@media only screen and (min-width: 768px) {
			
	.stacks-wrapper {	
		margin-left: 10%;  /* Grow margin when the screen size permits */
		margin-right: 10%;
		margin-top: 30px;
		margin-bottom: 50px;
	}
}

@media only screen and (min-width: 900px) {

}

/* Desktop Layout: 1000px and up.  Inherits styles from: Mobile Layout and Tablet Layout. */

@media only screen and (min-width: 1000px) {

}





/************************** Content structure *************************/

h2.pane-heading 
{
	height: 35;
	font-size: 14px;
	font-weight: bold;
	text-align: center;
	color: white;
	background-color:#2B5545; 
	padding: 8px;
	margin: 0px !important;
}


h2.pane-heading-right
{
	height: 35;
	font-size: 14px;
	font-weight: bold;
	text-align: right;
	color: white;
	background-color:#2B5545; 
	padding: 8px;
	margin: 0px !important;
}

a.pane-heading-link
{
	font-size: 14px;
	font-weight: bold;
	color: white;
	text-decoration: underline;
	cursor: pointer;
}

a.method-link
{
	background-color:#2B5545; 
	cursor: pointer;
}

.pane-filter {
	padding: 4px;
	height: 25;
}


.pane-contents {
	padding: 4px;
	height: calc(100% - 35px - 8px - 25px - 7px);
	overflow: scroll;
}

.method-links  /*********************** not used anywhere? */
{
	font-family: "Lucida Sans Typewriter", Courier, "Courier New", monospace;
	font-size: 12px;
}

/***** Details pane *****/

h2.method-heading 
{
	font-family: "Lucida Sans Typewriter", Courier, "Courier New", monospace;
	font-weight: normal;
	padding-top: 0 !important;
	margin-top: 0 !important;
	padding-bottom: 0 !important;
	margin-bottom: 0 !important; 
}

.method-body-indent  /*********************** not used anywhere? */
{
	padding-left: 15px; 
}

.method-section-header 
{
	margin-bottom: 15px;
}

.method-section-content 
{
	margin-left: 30px;
	margin-right: 30px;
}

.signature-heading 
{
	font-family: "Lucida Sans Typewriter", Courier, "Courier New", monospace;
	font-size: 18px;
	font-weight: normal;
	text-align: left;
	margin-bottom: 10px;
	color: black;
}

.module-location
{
	font-size: 12px;
}

.category-list
{
	font-size: 12px;
}

.signature-description
{
	margin-top: 10px; 
	margin-bottom: 15px;
	font-size: 14px;
}

.signature-description-no-margin  /******************* not used anywhere? */
{
	text-align: left;
	margin-bottom: 20px;
	font-weight: normal;
}


/* Method implementation and restriction table styling */

table.stacks
{
	margin-bottom: 30px;
	-webkit-border-horizontal-spacing: 2px !important;
	-webkit-border-vertical-spacing: 2px !important;
	border-collapse: separate !important;
	border-width: 2px !important;
}

.transparent
{
	color: inherit;
	background-color: inherit;
}

th.stacks /** Table heading cells **/
{
	font-size: 12px;
	color: white;
	text-align: left;

	padding-left: 3px;
	padding-right: 3px;
	padding-top: 2px;
	padding-bottom: 2px;
}

th.g-col-label-narrow 
{
	background-color: #C0C0C0;
	width: auto;
}

th.g-col-label-wide 
{
	background-color: #C0C0C0;
	width: 100%;
}

th.g-row-label   /*********************** not used anywhere? */
{
	background-color: #C0C0C0;
	white-space: nowrap;
}

th.i-col-label-narrow 
{
/*	background-color: rgb(192,211,192); */
	background-color: #CCCCCC;
	width: auto;
}

th.i-col-label-wide 
{
/*	background-color: rgb(192,211,192); */
	background-color: #CCCCCC;
	width: 100%;
}

th.i-row-label 
{
/*	background-color: rgb(192,211,192); */
	background-color: #CCCCCC;
	white-space: nowrap;
}

th.s-col-label-narrow   /*********************** not used anywhere? */
{
	background-color: #C0C0C0;
	width: auto;
}

th.s-col-label-wide   /*********************** not used anywhere? */
{
	background-color: #C0C0C0;
	width: 100%;
}

th.s-row-label   /*********************** not used anywhere? */
{
	background-color: #C0C0C0;
	white-space: nowrap;
}

td.stacks /** Table data cells **/
{
	font-size: 13px;
	text-align: left;

	padding-left: 3px;
	padding-right: 3px;
	padding-top: 2px;
	padding-bottom: 2px;
}

td.g-code 
{
	background-color: #EEEEEE;
	font-family: "Lucida Sans Typewriter", Courier, "Courier New", monospace;
	font-size: 12px;
	white-space: nowrap;
}

td.g-desc   /*********************** not used anywhere? */
{
	background-color: #EEEEEE;
	width: 100%;
}

td.i-code 
{
/*	background-color: #F6FAED; */
/*	background-color: #E2F0EB; */
	background-color: #EEEEEE;
	font-family: "Lucida Sans Typewriter", Courier, "Courier New", monospace;
	font-size: 12px;
	white-space: nowrap;
}

td.i-desc 
{
/*	background-color: #ECF2E1;
	background-color: #F6FAED; */
	background-color: #EEEEEE;
	width: 100%;
}

td.s-code   /*********************** not used anywhere? */
{
	background-color: #EEEEEE;
	font-family: "Lucida Sans Typewriter", Courier, "Courier New", monospace;
	font-size: 12px;
	white-space: nowrap;
}

td.s-desc 
{
	background-color: #EEEEEE;
	width: 100%;
}

